# peadb

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  FAQ.md  README.md  comparison_report.txt  docker-compose.yml  fix_tcl_tests.md  project-requirements.md
compat/: delta.md
docs/decisions/: d0-decisions.md  m4-lua2-analysis.md  m4-streams-analysis.md  m5-aof-analysis.md  m5-persistence-analysis.md  m6-replication-analysis.md  m8-module-certification.md  m8-modules-abi.md
include/: command.hpp  config.hpp  datastore.hpp  errors.hpp  logger.hpp  lua_engine.hpp  protocol.hpp  rdb.hpp  server.hpp
scripts/: .gitignore  README.md  requirements-dev.txt  requirements.txt  run_all_tests.sh
scripts/ci/: check_command_test_coverage.py  check_compat_delta.py  run_integration_tests.sh
scripts/debug/: test_eval_debug.py  test_repl_debug.py
scripts/dev/: install_deps_ubuntu.sh  memtier_test.sh  quick_start.sh  redis_vs_peadb_benchmark.sh
scripts/examples/: stress_test_redis_py.py
scripts/qa/: run_fuzz_sanity.sh  run_perf_baseline.sh  run_sentinel_validation.sh  run_stability_checks.sh
scripts/redis/: export_rdb_via_redis.py  import_rdb_via_redis.py  run_redis_tests.sh  sync_from_redis.py
src/: command.cpp  config.cpp  datastore.cpp  logger.cpp  lua_bit_stub.c  lua_cjson_stub.c  lua_cmsgpack_stub.c  lua_engine.cpp  lua_struct_stub.c  main.cpp  protocol.cpp  rdb.cpp  server.cpp
tests/diff/: last_repro.txt  run_diff_tests.py
tests/fuzz/: command_dispatcher_fuzz.cpp  command_dispatcher_stress.cpp  resp_parser_fuzz.cpp  resp_parser_stress.cpp
tests/integration/: _redis_path.py  test_command_coverage_extras.py  test_d0_artifacts.py  test_m0_smoke.py  test_m1_commands.py  test_m2_dump_restore.py  test_m2_strings_expire.py  test_m3_object_encoding.py  test_m4_blpop_brpop.py  test_m4_hash.py  test_m4_list.py  test_m4_list_moves.py  test_m4_lua.py  test_m4_lua2_atomic.py  (+81 more)
(+7 files in other folders)
